tests/pass/parse/integers/u32/min_fail.leo
function main() {
    const a: u32 = -1;
}