tests/fail/parse/syntax/field_fail.leo
function main() {
    const field = 0u32;
}